[tool.poetry]
name = "consistent-speaker-extraction"
version = "0.1.0"
description = ""
authors = ["p0ppo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.1.0"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
soundfile = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
